--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,24 @@
     </div>
     <div class="content">
       <div class="inner">
-        <h1>Sharaya's Cupcake Shop</h1>
-        <h2>What Flavor Cupcake Do You Like To Eat?</h2>
-        <p>I'm 13 Years Old.</p>
+        <h1>Visit Us at:</h1>
+        <h2>VMLY&R</h2>
+        <p>250 Richards Rd</p>
+        <p>Kansas City, Mo 64116</p>
+        <form
+          action="mailto:rayahendrix0210@gmail.com"
+          method="post"
+          enctype="text/plain"
+        >
+          Name:<br />
+          <input type="text" name="name" /><br />
+          E-mail:<br />
+          <input type="text" name="mail" /><br />
+          Comment:<br />
+          <input type="text" name="comment" size="50" /><br /><br />
+          <input type="submit" value="Send" />
+          <input type="reset" value="Reset" />
+        </form>
         <ul class="inline">
           <li><img src="img/cupcakes/cupcake4.jpg" alt="Cupcake Picture" /></li>
           <li>
